# Full-Stack-DS

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.adf  main.py  publish_config.json  pyproject.toml  setup.cfg
.github/workflow/: ci.yml
.github/workflows/: ci.yml
adf/linkedService/: fsdsakshta.json
config/: config.yaml
factory/: fsds-akshta.json
full_stack_ds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: infer.py  ingest.py  ingest_infer.py  main.py  monitor.py  score.py  train.py
src/fsds/: hello.py
src/housing/: data_ingestion.py  data_preparation.py  logging_utils.py  model_monitoring.py  model_scoring.py  model_training.py
tests/: test_data_ingestion.py  test_data_preparation.py  test_installation.py  test_model_training.py
