[project]
name = "full-stack-ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
formatter = [
    "black",
    "isort",
    "flake8",
]
plot = [
    "matplotlib",
    "seaborn",
]
test = [
    "pytest"
]

