[project]
name = "fsds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=2.22.0",
    "numpy>=1.22.0,<2.1",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "evidently==0.6.7"
]

[project.optional-dependencies]
formatter = [
    "black",
    "isort",
    "flake8",
]
plot = [
    "matplotlib",
    "seaborn",
]
test = [
    "pytest"
]

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':', conflicts with black
    "W503",  # line break before binary operator, black prefers this
]
exclude = [
    ".venv",
    "build",
    "dist",
    "__pycache__",
]
